# _SentinelFlow_Business_Observability_Engine_

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  config.yaml  mypy.ini  pyproject.toml  requirements.txt
analytics/: detectors.py  ewma.py  zscore.py
api/: app.py
infra/: docker-compose.yml  prometheus.yml
infra/grafana/dashboards/: sentinelflow.json
infra/grafana/provisioning/: dashboards.yaml
observability/: context.py  instrumentation.py  metrics.py  tracing.py
persistence/: base.py  sqlite_store.py
resilience/: circuit_breaker.py
runtime/: admin_server.py  readiness.py  resilience.py
src/: main.py
src/config/: parser.py  settings.py
src/core/: history.py  policies.py
src/core/evaluators/: freshness.py  (+1 more)
src/engine/: executor.py  registry.py  scheduler.py
src/handlers/: slack.py
src/interfaces/: evaluator.py  handler.py  ingestor.py
src/models/: entities.py
src/utils/: exceptions.py  logger.py  retry.py
tests/: test_alert_policy.py  test_config_validation.py  test_engine_executor.py  test_freshness_evaluator.py  test_slack_handler_payload.py  test_threshold_evaluator.py
tests/fixtures/: dummy.py
tests/integration/: test_full_pipeline_in_memory.py  test_http_ingestor_mocked.py  test_slack_handler_mocked.py
tests/unit/: test_alert_policy.py  test_circuit_breaker.py  test_edge_cases.py  test_execution_history.py  test_executor.py  test_metrics.py  test_registry.py  test_retry_logic.py  test_scheduler.py  test_settings_validation.py  test_tracing_smoke.py
typestubs/aiosqlite/: __init__.pyi
(+3 files in other folders)
