[project]
name = "sentinelflow"
version = "0.1.0"
description = "Business Observability Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.40b0",
    "prometheus-client>=0.19.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]